# centaur

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Justfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  slack-app-manifest.yml
.agents/skills/gtm/: SKILL.md
.agents/skills/improve-gap-task/: SKILL.md
.agents/skills/managing-db-migrations/: SKILL.md
.agents/skills/policy-gigabrain/: SKILL.md
.agents/skills/sourcer/: SKILL.md
.github/workflows/: ci.yml  deploy.yml  e2e.yml  publish-images.yml
apps/slackbot/: .env.example  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
apps/usage/: app.js  data.json  index.html  serve.py  style.css
centaur_sdk/: __init__.py  pyproject.toml  ruff.toml  tool_sdk.py
centaur_sdk/centaur_sdk/: toolrunner.py
centaur_sdk/providers/: env.py
centaur_sdk/tests/: test_tool_sdk.py  test_toolrunner.py
contrib/chart/: Chart.yaml  values.dev.yaml  values.schema.json  values.yaml
contrib/chart/templates/: apirs.yaml  ingress.yaml  networkpolicy.yaml  services.yaml  workloads.yaml  zulipbot.yaml
contrib/scripts/: bootstrap-k8s-secrets.sh  muesli-push.sh
crates/harness-server/src/: codex.rs  server.rs
docs/: agent-runtime-ship-checklist.md  chat-sdk-migration-audit.md  sidebar.ts  vocs.config.ts
docs/integrations/: muesli.md
docs/pages/: _root.css  deploying-in-production.mdx  mac-mini-setup.mdx  quickstart.mdx
docs/pages/operate/: slack-etl.mdx  zulip-etl.mdx
docs/pages/reference/: configuration.mdx  tool-directory.mdx
docs/public/md/: architecture.md  deploying-in-production.md  quickstart.md
docs/scripts/: build-og.ts
e2e/: README.md  TESTING_MATRIX.md
e2e/deploy/: run-kind.sh
migrations/versions/: 003_chat_messages.py  003_drop_secrets_table.py
monitoring/: nginx.conf
plugins/: README.md
plugins/agent/: Dockerfile  entrypoint.sh
plugins/agent/config/: amp-settings.json  claude-settings.json  codex-config.toml
plugins/archiver/: client.py
plugins/confmonitor/: cli.py
plugins/demo/: client.py
plugins/parchiver/: client.py
plugins/ptwittercli/: cli.py  client.py
plugins/reth-log-analyzer/: cli.py
plugins/social-monitor/: cli.py
plugins/termsheet/: cli.py
sandbox/: Dockerfile  SYSTEM_PROMPT.md  entrypoint.sh  harness_session.py
scripts/: auth-bootstrap.js  backfill_titles.py  control-plane-rs-e2e.sh  qa-full-tools.py  qa_agent_runtime_flow.py
services/api/: Dockerfile  bootstrap-secrets.sh  entrypoint.sh
services/api-rs/: Cargo.toml  Dockerfile
services/api/api/: agent.py  api_keys.py  app.py  apps.py  chat_stream.py  db.py  observability.py  proxy_config.py  runtime_control.py  runtime_guardrails.py  slackbot_client.py  tool_manager.py  tool_server_app.py  vm_metrics.py  warm_pool.py  workflow_engine.py
services/api/tests/: test_agent_control_plane.py  test_agent_resilience.py  test_api_router_edges.py  test_attachments.py  test_call_sh.py  test_chat_stream.py  test_check_scope.py  test_company_context_documents.py  test_create_pool_retry.py  test_direct_api_e2e.py  test_harmonic_tool_client.py  test_harness_protocol.py  test_inflight_replay.py  test_install_tool_shims.py  test_integration.py  test_lp_meeting_brief_batch.py  test_proxy_config.py  test_runtime_guardrails.py  test_sandbox_docker_backend.py  test_sandbox_entrypoint.py  test_sandbox_kubernetes_backend.py  test_self_improve_daily.py  test_slack_event_ingest.py  test_slack_sync.py  test_slack_thread_turn_history_unit.py  test_slackbot_client.py  test_tool_manager.py  test_tool_server_core_pg.py  test_toolrunner_parity.py  test_url_interceptor.py  test_zulip_sync.py
services/control-plane-rs/: Cargo.toml  Dockerfile
services/control-plane-rs/migrations/: 001_control_plane.sql
services/control-plane-rs/src/: auth.rs  control.rs  db.rs  error.rs  main.rs  sandbox.rs  types.rs
services/firewall/: addon.py  entrypoint.sh
services/iron-proxy/: Dockerfile  iron-proxy.yaml
services/iron-proxy/harness/: claude-code-access-token.yaml  codex-access-token.yaml
services/mitm/: addon.py
services/sandbox/: Dockerfile  Dockerfile.thin  SYSTEM_PROMPT.md  amp-wrapper.py  call.sh  centaur-tools.sh  codex-app-wrapper.py  collect-tool-deps.py  entrypoint.sh  git-branch.sh
services/secrets/secret_manager/: app.py  env.py
services/slackbot/: vitest.config.ts
services/slackbot/src/: config.ts  index.ts
services/slackbot/test/: bot.test.ts  dashboard-to-slack.test.ts  integration.test.ts  progress-tracker.test.ts  runtime-control.test.ts  slack-event-routing.test.ts  slack-markdown.test.ts
services/slackbotv2/: package.json
services/slackbotv2/src/: index.ts  server.ts  session-api.ts  (+1 more)
services/workflow-python/: workflow_host.py
services/zulipbot/: .env.example  Dockerfile  bunfig.toml  env.d.ts  oxlint.config.ts  package.json  tsconfig.json
src/ai_v2/: app.py  cli.py  plugin_manager.py
src/api/: agent.py  app.py  deps.py  mcp_server.py  pipe_agent.py
src/secret_manager/: app.py
src/shared/: cli.py  config.py  dashboard.py  plugin_manager.py  tool_manager.py
tests/: test_reload.py  test_tools.py
tools-paradigm/paradigmdb/: database.py  pyproject.toml
tools-paradigm/slack/: client.py
tools/addepar/: client.py
tools/alphasense/: client.py
tools/bloomberg/: client.py
tools/coinbase/: client.py
tools/databento/: client.py  pyproject.toml
tools/eodhd/: client.py  pyproject.toml
tools/infra/posthog/: pyproject.toml
tools/jpm/: client.py
tools/paradigmdb/: client.py  database.py
tools/productivity/airtable/: pyproject.toml
tools/productivity/company_context/: cli.py  client.py  pyproject.toml
tools/productivity/company_context/tests/: test_client.py
tools/research/websearch/: pyproject.toml
tools/sensortower/: client.py
tools/slack/: client.py
workflows/: company_context_documents.py  lp_meeting_brief_batch.py  miq_tracker.py  self_improve_daily.py  slack_sync.py  slack_sync_shared.py  usage_stats.py  zulip_backfill.py  zulip_sync.py  zulip_sync_shared.py
(+240 files in other folders)
