[project]
name = "paradigm-ai-v2"
version = "0.1.0"
description = "Paradigm AI v2 — Postgres+pgvector data plane, FastAPI+MCP API, Codex+Docker sandbox"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "asyncpg>=0.30.0",
    "anthropic>=0.54.0",
    "pgvector>=0.3.6",
    "httpx>=0.28.0",
    "openai>=1.60.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "click>=8.1.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "mcp>=1.0.0",
    "typer>=0.12.0",
    "toon-format @ git+https://github.com/toon-format/toon-python.git",
    "docker>=7.0.0",
    "onepassword-sdk>=0.4.0",
    "psycopg2-binary>=2.9.11",
]

[project.scripts]
ai-v2 = "shared.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/api", "src/etl", "src/shared", "src/secret_manager", "src/secret_backends"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "TID"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# These files legitimately need os.getenv / os.environ / dotenv
"src/secret_backends/*" = ["TID251"]
"src/secret_manager/*" = ["TID251"]
"src/shared/*" = ["TID251"]
"src/api/*" = ["TID251"]
"src/etl/*" = ["TID251"]
"services/*" = ["TID251"]
"scripts/*" = ["TID251"]
"tests/*" = ["TID251"]
"apps/*" = ["TID251"]
# Tool CLIs are standalone entrypoints that use load_dotenv
"tools/*/cli.py" = ["TID251"]
"tools-paradigm/*/cli.py" = ["TID251"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"os.getenv".msg = "Use `from shared.tool_sdk import secret; secret('KEY')` instead of os.getenv(). Secrets come from the secret manager, not environment variables."
"os.environ.get".msg = "Use `from shared.tool_sdk import secret; secret('KEY')` instead of os.environ.get(). Secrets come from the secret manager, not environment variables."
"dotenv.load_dotenv".msg = "Do not use load_dotenv() in tools. Secrets come from the secret manager sidecar."

[tool.ruff.lint.isort]
known-first-party = ["api", "etl", "shared", "secret_manager", "secret_backends"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
