[project]
name = "centaur-sdk"
version = "0.1.0"
description = "Lightweight SDK for building Centaur-compatible tools"
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0 OR MIT"
dependencies = [
    "rich>=13.0",
]
# toolrunner needs toon-format at runtime, but it's a git-URL package — declaring
# it here would make it a transitive URL dep that uv rejects in the API image's
# tool-deps install. Each runner runtime installs it directly instead.

[project.optional-dependencies]
http = ["httpx>=0.28.0"]

[project.scripts]
centaur-tool = "centaur_sdk.toolrunner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["centaur_sdk"]
