[package]
name = "centaur-control-plane"
version = "0.1.0"
edition = "2024"

[features]
default = []
kube-client = ["dep:kube", "dep:k8s-openapi", "dep:serde_yaml", "dep:tokio-util"]

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["json", "tokio"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hmac = "0.12"
k8s-openapi = { version = "0.25", features = ["v1_32"], optional = true }
kube = { version = "1", features = ["client", "runtime", "rustls-tls", "ws"], optional = true }
pin-project-lite = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { version = "0.9", optional = true }
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["chrono", "json", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["io"], optional = true }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
