[project]
name = "posthog"
description = "PostHog product analytics — HogQL queries, pageviews, breakdowns"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
posthog = "posthog.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ai-v2]
module = "client.py"
secrets = [
    {type = "http", name = "POSTHOG_API_KEY", match_headers = ["Authorization"], hosts = ["us.posthog.com"]},
    {type = "http", name = "POSTHOG_PROJECT_ID", match_path = true, hosts = ["us.posthog.com"]},
]
