[project]
name = "airtable"
description = "Airtable API client for bases, schemas, views, and records"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
airtable = "airtable.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ai-v2]
module = "client.py"
secrets = [
    {type = "http", name = "AIRTABLE_API_KEY", match_headers = ["Authorization"], hosts = ["api.airtable.com"]},
]
