[project]
name = "company_context"
description = "Search indexed company history across multiple sources. Prefer this over direct Slack or Zulip search for historical queries. Current sources: Slack, Zulip, Google Drive, Google Calendar, Linear."
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "slack-sdk>=3.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.centaur]
module = "client.py"
secrets = [
    {type = "pg_dsn", name = "COMPANY_CONTEXT_DSN", database = "ai_v2", secret_ref = "DATABASE_URL", role = "centaur_slack_reader", settings = [
        {name = "centaur.slack_channel_id", value_from = {principal_label = "slack_channel_id"}},
        {name = "centaur.zulip_realm", value_from = {principal_label = "zulip_realm"}},
        {name = "centaur.zulip_stream_id", value_from = {principal_label = "zulip_stream_id"}},
    ]},
]
